Fix styling for overflowing tabs.

--- a/html/style.sass
+++ b/html/style.sass
@@ -109,6 +109,7 @@ html, body, #app
   background: #aaf
   display: flex
   flex-direction: row
+  overflow: auto
 
 .tabs-left > .tabs-select
   width: auto
@@ -116,6 +117,7 @@ html, body, #app
   background: #88f
   display: flex
   flex-direction: column  
+  overflow: auto
 
 .tabs-panes
   flex: 1
